# bookmark-axum-askama-htmx

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER_DEPLOY.md  Dockerfile  LICENSE  README.EN.md  README.md  bookmark.service  build.rs  docker-compose.ghcr.yml  docker-compose.yml  nginx.conf  package.json
.github/workflows/: build.yml  docker-build.yml
browser-ext/: README.md  package.json  wxt.config.ts
browser-ext/assets/: tailwind.css
browser-ext/entrypoints/: background.ts  content.ts
browser-ext/entrypoints/options/: index.html  main.ts
browser-ext/entrypoints/popup/: index.html  main.ts
browser-ext/entrypoints/quick-save/: index.html  main.ts
browser-ext/utils/: api.ts  bookmark-form.ts  storage.ts
configuration/: base.yaml
demo/: bookmarks_29_06_2026.html
docker/: base.yaml.template  entrypoint.sh
locales/en-US/: main.ftl
locales/zh-CN/: main.ftl
migrations/: 20260624051018_init.sql
public/css/: main.css
src/: error.rs  lib.rs  main.rs
src/app/: config.rs  mod.rs  server.rs  state.rs
src/domain/: mod.rs
src/domain/bookmark/: error.rs  models.rs  services.rs  traits.rs
src/domain/image/: error.rs  services.rs  traits.rs
src/domain/user/: error.rs  mod.rs  models.rs  services.rs  traits.rs
src/infra/: mod.rs
src/infra/auth_provider/: local.rs
src/infra/database/: bookmark.rs  user.rs
src/infra/image/: convert.rs
src/infra/storage/: local.rs
src/routes/: bookmark.rs  home.rs  i18n.rs  image.rs  mod.rs  user.rs
src/routes/extractor/: i18n.rs  mod.rs  user.rs  validated_json.rs
src/routes/middleware/: auth.rs  i18n.rs
src/utils/: i18n.rs  mod.rs  utils.rs
src/utils/askama/: filters.rs
src/utils/serde/: custom_date_format.rs  mod.rs  parse_de_error.rs
static/: bookmark-import.en.html  bookmark-import.html
templates/: input.css
templates/components/: bookmark.html  bookmark_list.html  lang_select.html
templates/layouts/: base.html  sidebar.html
templates/pages/: 400.html  404.html  500.html  add_bookmark.html  api_token.html  change_password.html  edit_bookmark.html  home.html  login.html
